# lp2-2026-1-p1-matrizes

./: .gitignore  CMakeLists.txt  Makefile  README.md  benchmark_results.csv
src/: main.c  matrix_multiply.c  matrix_multiply.h
tools/: plot.py
